# komga

./: .bfg-replacements.txt  .env  .gitignore  .markdownlint.json  AnalyzeEpub.ps1  AnalyzeEpubSimple.ps1  BUILD_CLEANUP.md  CNAME  IMPROVE_SCROLLBARS.md  PRD.md  README.md  analyze_epub.kt  build.bat  build.gradle.kts  build_analyzer.gradle.kts  build_and_analyze.ps1  build_and_analyze.py  build_with_ai.bat  clean.bat  clean_build.ps1  cleanup.bat  deep_clean.bat  full_cleanup.bat  gradle.properties  hard_clean.bat  index.html  ktlint_check_20250527_062006.txt  ktlint_check_output.txt  ktlint_format_output.txt  ktlint_full_report.txt  ktlint_main_output.txt  ktlint_output.txt  ktlint_script_check.txt  lmstudio_models.json  ollama_tags.json  package-lock.json  package.json  run_build.bat  super_clean.ps1
config/: application.yml
docs/: FUTURE_FEATURES.md
docs/cursor/: README.md  company_history.md  competitive_landscape.md  critical_reception.md  cursor_ide_analysis.md  financials_and_pricing.md  product_features.md  rules_and_memories.md
docs/docs_viewer/: DEVELOPER_GUIDE.md  USER_GUIDE.md  requirements.md
docs/rag/: system_guide.md
docs/windsurf/: README.md  cleanup_plan.md  consolidation_plan.md  corporate_history.md  document_tool_spec.md  komga_plus_plus_design.md
docs_viewer/: .eslintrc.json  CONTRIBUTING.md  PRD.md  README.md  check-build.bat  check-build.ps1  check_chromadb.py  check_chromadb_server.py  check_server.py  docker-compose.weaviate.yml  electron-builder.json  eslint.config.js  main.js  package-lock.json  package.json  qbert.html  start_chromadb.py  start_chromadb_uvicorn.py  start_docs_viewer.bat  start_weaviate.bat  test_weaviate.js
docs_viewer/ai_backend/: requirements.txt
docs_viewer/backend/: app.js  index.js  knexfile.js  package-lock.json  package.json  server.js  test.js
docs_viewer/data/: docs_viewer.sqlite-shm  docs_viewer.sqlite-wal
docs_viewer/docs/: README.md  SINGLE_EXECUTABLE.md  ai_playground.md  developer_guide.md  teams_integration.md  user_guide.md
komga/: build.gradle.kts  build_without_ai.gradle.kts
komga-webui/: package-lock.json  package.json  tsconfig.json
rag/: .pre-commit-config.yaml  Dockerfile  README.md  config.yaml  docker-compose.yml  main.py  pyproject.toml  setup_rag_structure.py
rag/analysis/: thematic_analyzer.py
rag/api/: __init__.py
rag/core/: rag_service.py
rag/processing/: document_processor.py
rag/retrieval/: retriever.py  vector_store.py
rag/tests/: __init__.py  conftest.py  test_api.py
scripts/: README.md  Taskbar-AutoHide-Fixinator.ps1  analyze_repo.ps1  backup_repos.ps1  debug_epub.ps1  epub_analyzer.ps1  epub_check.ps1  fix_repo_paths.ps1  init_database.ps1  process_opf.ps1  repo_fix_report_20250530_160356.txt  repo_fix_report_20250530_160528.txt  simple_epub.ps1  test_access.ps1  verify_repo_move.ps1
(+427 files in other folders)
